added license to the package

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "name": "Bruno Logerfo",
         "url": "https://github.com/Logerfo"
     },
+    "license": "Unlicense",
     "homepage": "https://github.com/Logerfo/open-all-files/blob/master/README.md",
     "repository": {
         "type": "git",
