--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "Other"
     ],
     "activationEvents": [
-        "onCommand:extension.openAllFiles"
+        "onCommand:open-all-files.openAllFiles"
     ],
     "main": "./out/extension",
     "contributes": {
@@ -52,14 +52,14 @@
         ],
         "commands": [
             {
-                "command": "extension.openAllFiles",
+                "command": "open-all-files.openAllFiles",
                 "title": "Open All Files"
             }
         ],
         "menus": {
             "explorer/context": [
                 {
-                    "command": "extension.openAllFiles",
+                    "command": "open-all-files.openAllFiles",
                     "group": "navigation"
                 }
             ]
