not showing the context menu when the select item is a file

--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
             "explorer/context": [
                 {
                     "command": "open-all-files.openAllFiles",
-                    "group": "navigation"
+                    "group": "navigation",
+                    "when": "explorerResourceIsFolder"
                 }
             ]
         }
