--- a/package.json
+++ b/package.json
@@ -63,6 +63,12 @@
                     "group": "navigation",
                     "when": "explorerResourceIsFolder"
                 }
+            ],
+            "commandPalette": [
+                {
+                    "command": "open-all-files.openAllFiles",
+                    "when": "false"
+                }
             ]
         }
     },
