--- a/package.json
+++ b/package.json
@@ -75,8 +75,7 @@
     "scripts": {
         "vscode:prepublish": "webpack --mode production",
         "compile": "webpack --mode none",
-        "watch": "webpack --mode none --watch",
-        "postinstall": "node ./node_modules/vscode/bin/install"
+        "watch": "webpack --mode none --watch"
     },
     "devDependencies": {
         "@types/mocha": "5.2.7",
@@ -84,7 +83,7 @@
         "ts-loader": "6.0.4",
         "tslint": "5.18.0",
         "typescript": "3.5.3",
-        "vscode": "1.1.35",
+        "@types/vscode": "1.26",
         "webpack": "4.35.3",
         "webpack-cli": "3.3.6"
     }
