--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     },
     "bugs": {
         "url": "https://github.com/Logerfo/open-all-files/issues",
-        "email": "bruno@logerfo.tk"
+        "email": "bruno@logerfo.com.br"
     },
     "author": {
-        "email": "bruno@logerfo.tk",
+        "email": "bruno@logerfo.com.br",
         "name": "Bruno Logerfo",
         "url": "https://github.com/Logerfo"
     },
